--- a/unpackaged/package.xml
+++ b/unpackaged/package.xml
@@ -1,76 +1,30 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
 	<types>
-        <members>*</members>
-        <name>CustomField</name>
-    </types>
+		<members>DreamWorld</members>
+		<name>ApexClass</name>
+	</types>
 	<types>
-        <members>*</members>
-        <name>CustomObject</name>
-    </types>
+		<members>*</members>
+		<name>ApexTrigger</name>
+	</types>
 	<types>
-        <members>*</members>
-        <name>CustomTab</name>
-    </types>
+		<members>DreamWorld</members>
+		<name>CustomApplication</name>
+	</types>
 	<types>
-        <members>*</members>
-        <name>EmailTemplate</name>
-    </types>
+		<members>Account.Demo_Phone__c</members>
+		<members>DreamWorld__c.Dream_World_Title__c</members>
+		<name>CustomField</name>
+	</types>
 	<types>
-        <members>*</members>
-        <name>FlexiPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>Flow</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>Layout</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
-    </types>
+		<members>Demo__c</members>
+		<members>DreamWorld__c</members>
+		<name>CustomObject</name>
+	</types>
 	<types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ValidationRule</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>Workflow</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>WorkflowRule</name>
-    </types>
-    <version>54.0</version>
+		<members>*</members>
+		<name>CustomTab</name>
+	</types>
+	<version>53.0</version>
 </Package>
