--- a/retrieveUnpackaged/package.xml
+++ b/retrieveUnpackaged/package.xml
@@ -1,30 +1,29 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>DreamWorld</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>DreamWorld</members>
-        <name>CustomApplication</name>
-    </types>
-    <types>
-        <members>Account.Demo_Phone__c</members>
-        <members>DreamWorld__c.Dream_World_Title__c</members>
-        <name>CustomField</name>
-    </types>
-    <types>
-        <members>Demo__c</members>
-        <members>DreamWorld__c</members>
-        <name>CustomObject</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>CustomTab</name>
-    </types>
-    <version>53.0</version>
+	<types>
+		<members>DreamWorld</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>ApexTrigger</name>
+	</types>
+	<types>
+		<members>DreamWorld</members>
+		<name>CustomApplication</name>
+	</types>
+	<types>
+		<members>DreamWorld__c.Dream_World_Title__c</members>
+		<name>CustomField</name>
+	</types>
+	<types>
+		<members>Demo__c</members>
+		<members>DreamWorld__c</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>CustomTab</name>
+	</types>
+	<version>53.0</version>
 </Package>
