--- a/build.properties
+++ b/build.properties
@@ -2,8 +2,10 @@
 #
 
 # Specify the login credentials for the desired Salesforce organization
-sf.username = palash.singh@fexle.com.training.staging
-sf.password = Palash2992CioYzDdRsqUFb7gHiNkx1x5A
+sf.username = palash.singh@fexle.com.training.production
+sf.password = Palash2992qR1eeeDkeOwBO05h2sCDtE6D
+#sf.username = palash.singh@fexle.com.training.staging
+#sf.password = Palash2992CioYzDdRsqUFb7gHiNkx1x5A
 #sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
 #sf.pkgName = <Insert comma separated package names to be retrieved>
 #sf.zipFile = <Insert path of the zipfile to be retrieved>
